work in progress, yes

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,6 @@
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="/bower_components/bulma/css/bulma.css" />
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -122,22 +121,98 @@
     </div>
   </section>
 
-  <!-- <section class="section-big">
-    <div class="col-sm-6">
-      <div class="box">
-        <h2>We help startups grow better, faster.</h2>
-        <p>TechHub is a unique environment where technology startups can start up faster.
-          <br>We nurture an international network of like-minded and focused tech entrepreneurs, providing places where they can work, meet, collaborate, network, learn and have fun. By getting the right people together in a physical space, good things happen.</p>
+  <section class="section">
+    <div class="container is-fluid">
+      <h2 class="title is-centered">Memberships</h2>
+      <div class="columns">
+        <div class="column">
+          <div class="message message-m">
+            <div class="message-header is-centered message-header-membership">
+              Flex
+            </div>
+            <div class="message-body">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus,
+              in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="message">
+            <div class="message-header is-centered message-header-membership">
+              Resident
+            </div>
+            <div class="message-body">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus,
+              in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="message">
+            <div class="message-header is-centered message-header-membership">
+              Team
+            </div>
+            <div class="message-body">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus,
+              in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="content is-centered">
+        <a href="#" class="button is-primary">Discover more about our memberships</a>
       </div>
     </div>
-    <div class="col-sm-6">
-      <div class="map-bg"></div>
+  </section>
+
+  <section class="section">
+    <nav class="navbar navbar-stats">
+      <div class="navbar-item is-centered">
+        <p class="heading">Members</p>
+        <p class="title">13000+</p>
+      </div>
+      <div class="navbar-item is-centered">
+        <p class="heading">Nationalities</p>
+        <p class="title">92</p>
+      </div>
+      <div class="navbar-item is-centered">
+        <p class="heading">Events</p>
+        <p class="title">365/year</p>
+      </div>
+      <div class="navbar-item is-centered">
+        <p class="heading">Awesomeness</p>
+        <p class="title">100%</p>
+      </div>
+    </nav>
+  </section>
+
+  <section id="newsletter" class="hero is-primary is-bold">
+    <div class="hero-content">
+      <div class="container">
+        <div class="columns is-vcentered">
+          <div class="column is-third is-left">
+            <p class="title">TechHub <strong>Newsletter</strong></p>
+            <p class="subtitle">Get to know what's happening in our Community!</p>
+          </div>
+          <div class="column">
+            <div class="control is-withicon is-horizontal">
+              <input type="email" value="" name="EMAIL" class="input is-flat required email" id="mce-EMAIL" placeholder="email address" required="" aria-required="true">
+              <input type="submit" value="Subscribe" name="subscribe" class="button is-primary is-outlined is-inverted">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </section> -->
+  </section>
 
-
-  <footer class="footer">
+  <footer class="footer small-padding-bottom">
     <div class="columns">
+      <div class="column">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem facere vero ut ipsa magnam labore laboriosam numquam similique. Placeat corporis, quaerat aliquam incidunt provident earum veniam, numquam voluptate cum inventore!
+      </div>
+      <div class="column">
+        <img src="images/map.png" alt="">
+      </div>
       <div class="column">
         <ul class="list">
           <li><a href="#">Bangalore</a></li>
@@ -160,14 +235,10 @@
           <li><a href="#">Warsaw</a></li>
         </ul>
       </div>
-      <div class="column">
-
-      </div>
-      <div class="column">
-        TechHub
-        <br>4-5 Bonhill Street
-        <br>EC2 4BX
-        <br>London
+    </div>
+    <div class="container">
+      <div class="content is-centered">
+        TechHub, 4-5 Bonhill Street, EC2 4BX, London (UK)
       </div>
     </div>
   </footer>
