work in progress

--- a/app/index.html
+++ b/app/index.html
@@ -92,21 +92,21 @@
         Online and physical places where startups can work,
         <br>meet, collaborate, network, learn and have fun
       </h2> -->
-        <a href="#" class="button is-home-cta is-medium">Join the Community</a>
+        <a href="#" class="button is-home-cta is-medium">Become a member</a>
         <a href="#" class="button is-home-cta is-medium">Attend our Events</a>
       </div>
     </div>
 
     <!-- Hero footer: will stick at the bottom -->
     <div class="hero-footer hero-home">
-      <div class="is-centered">
+      <div class="is-text-centered">
         <div class="wrapper-gfe">
           <div class="text-gfe">Global Partner</div>
           <a href="https://www.googleforentrepreneurs.com"><img src="images/gfe.png" alt="Google for Entrepreneurs" class="logo-gfe"></a>
         </div>
       </div>
       <nav class="tabs is-centered tabs-home">
-        <div class="container is-centered">
+        <div class="container is-text-centered">
           <ul>
             <li><a href="#">Bangalore</a></li>
             <li><a href="#">Bucharest</a></li>
@@ -121,81 +121,188 @@
     </div>
   </section>
 
-  <section class="section">
-    <div class="container is-fluid">
-      <h2 class="title is-centered">Memberships</h2>
-      <div class="columns">
-        <div class="column">
-          <div class="message message-m">
-            <div class="message-header is-centered message-header-membership">
-              Flex
-            </div>
-            <div class="message-body">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus,
-              in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-            </div>
-          </div>
-        </div>
-        <div class="column">
-          <div class="message">
-            <div class="message-header is-centered message-header-membership">
-              Resident
-            </div>
-            <div class="message-body">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus,
-              in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-            </div>
-          </div>
-        </div>
-        <div class="column">
-          <div class="message">
-            <div class="message-header is-centered message-header-membership">
-              Team
-            </div>
-            <div class="message-body">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus mi, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum felis venenatis efficitur. Aenean ac eleifend lacus,
-              in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-            </div>
-          </div>
+  <section class="section is-paddingless">
+    <!-- <h2 class="title is-text-centered">We help startups grow better, faster</h2> -->
+    <div class="columns columns-minimal-border">
+      <div class="column full-bg full-bg-1">
+        <div class="full-bg-text">
+          <h3 class="title">
+            This is a nice title
+          </h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos fugiat similique a quia consequatur voluptatem quasi vero aspernatur consectetur beatae, dolor neque, ad, atque eligendi voluptas molestiae, rem! Molestiae, facere.
         </div>
       </div>
-      <div class="content is-centered">
-        <a href="#" class="button is-primary">Discover more about our memberships</a>
+      <div class="column full-bg full-bg-2">
+        <div class="full-bg-text">
+          <h3 class="title">
+            Another nice title that describes what we do
+          </h3>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde debitis architecto, est deleniti reprehenderit quia assumenda laudantium labore doloribus cumque maxime doloremque quidem facere ea eveniet ipsa exercitationem at dicta!
+        </div>
       </div>
     </div>
   </section>
 
   <section class="section">
     <nav class="navbar navbar-stats">
-      <div class="navbar-item is-centered">
+      <div class="navbar-item is-text-centered">
         <p class="heading">Members</p>
-        <p class="title">13000+</p>
+        <p class="title">1300+</p>
       </div>
-      <div class="navbar-item is-centered">
+      <div class="navbar-item is-text-centered">
         <p class="heading">Nationalities</p>
-        <p class="title">92</p>
+        <p class="title">58</p>
       </div>
-      <div class="navbar-item is-centered">
+      <div class="navbar-item is-text-centered">
         <p class="heading">Events</p>
-        <p class="title">365/year</p>
+        <p class="title">365 per year</p>
       </div>
-      <div class="navbar-item is-centered">
+      <div class="navbar-item is-text-centered">
         <p class="heading">Awesomeness</p>
         <p class="title">100%</p>
       </div>
     </nav>
   </section>
 
+  <section class="section">
+    <div class="container is-fluid">
+      <h2 class="title is-text-centered">
+        Alumni & Members
+      </h2>
+      <div class="columns">
+        <div class="column">
+          <article class="media">
+            <figure class="media-left">
+              <a href="#">
+                <p class="image is-128x128 is-vcentered">
+                  <img src="images/logo_nexmo.png">
+                </p>
+              </a>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Nexmo</strong>
+                  <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="column">
+          <article class="media">
+            <figure class="media-left">
+              <a href="#">
+                <p class="image is-128x128">
+                  <img src="images/logo_import.png">
+                </p>
+              </a>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Import.io</strong>
+                  <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <article class="media">
+            <figure class="media-left">
+              <a href="#">
+                <p class="image is-128x128 is-vcentered">
+                  <img src="http://www.divide.com/images/header_logo.png" style="max-width:100px;">
+                </p>
+              </a>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Divide</strong>
+                  <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="column">
+          <article class="media">
+            <figure class="media-left">
+              <a href="#">
+                <p class="image is-128x128">
+                  <img src="images/logo_callsign.png">
+                </p>
+              </a>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Callsign</strong>
+                  <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="container is-fluid">
+      <h2 class="title is-text-centered">Memberships</h2>
+      <div class="columns same-height">
+        <div class="column">
+          <div class="message is-primary">
+            <div class="message-header is-text-centered message-header-membership">
+              Flex
+            </div>
+            <div class="message-body">
+              Lonely Founder? Working from home? Still working on your idea? Looking for feedback? Join the community and drop-in whenever you're around!
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="message is-primary">
+            <div class="message-header is-text-centered message-header-membership">
+              Resident
+            </div>
+            <div class="message-body">
+              Your own desk in our open plan resident area! 24/7 access for individuals and teams.
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="message is-primary">
+            <div class="message-header is-text-centered message-header-membership">
+              Team
+            </div>
+            <div class="message-body">
+              Your very own private space within TechHub. Stay within the community as you grow. Teams of 4 or more. Great for regulated companies who need a locking door but want to stay in the community.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="content is-text-centered">
+        <a href="#" class="button is-primary">Discover more about our memberships</a>
+      </div>
+    </div>
+  </section>
+
   <section id="newsletter" class="hero is-primary is-bold">
     <div class="hero-content">
       <div class="container">
         <div class="columns is-vcentered">
-          <div class="column is-third is-left">
+          <div class="column is-half is-left">
             <p class="title">TechHub <strong>Newsletter</strong></p>
             <p class="subtitle">Get to know what's happening in our Community!</p>
           </div>
-          <div class="column">
-            <div class="control is-withicon is-horizontal">
+          <div class="column is-half">
+            <div class="control is-horizontal">
               <input type="email" value="" name="EMAIL" class="input is-flat required email" id="mce-EMAIL" placeholder="email address" required="" aria-required="true">
               <input type="submit" value="Subscribe" name="subscribe" class="button is-primary is-outlined is-inverted">
             </div>
@@ -237,7 +344,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="content is-centered">
+      <div class="content is-text-centered">
         TechHub, 4-5 Bonhill Street, EC2 4BX, London (UK)
       </div>
     </div>
