dark map, footer

--- a/app/index.html
+++ b/app/index.html
@@ -121,28 +121,6 @@
     </div>
   </section>
 
-  <section class="section is-paddingless">
-    <!-- <h2 class="title is-text-centered">We help startups grow better, faster</h2> -->
-    <div class="columns columns-minimal-border">
-      <div class="column full-bg full-bg-1">
-        <div class="full-bg-text">
-          <h3 class="title">
-            This is a nice title
-          </h3>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos fugiat similique a quia consequatur voluptatem quasi vero aspernatur consectetur beatae, dolor neque, ad, atque eligendi voluptas molestiae, rem! Molestiae, facere.
-        </div>
-      </div>
-      <div class="column full-bg full-bg-2">
-        <div class="full-bg-text">
-          <h3 class="title">
-            Another nice title that describes what we do
-          </h3>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde debitis architecto, est deleniti reprehenderit quia assumenda laudantium labore doloribus cumque maxime doloremque quidem facere ea eveniet ipsa exercitationem at dicta!
-        </div>
-      </div>
-    </div>
-  </section>
-
   <section class="section">
     <nav class="navbar navbar-stats">
       <div class="navbar-item is-text-centered">
@@ -164,9 +142,36 @@
     </nav>
   </section>
 
+  <section class="section is-paddingless">
+    <!-- <h2 class="title is-text-centered">We help startups grow better, faster</h2> -->
+    <div class="columns columns-minimal-border">
+      <div class="column full-bg full-bg-1">
+        <div class="full-bg-text">
+          <h3 class="title">
+            Community
+          </h3> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos fugiat similique a quia consequatur voluptatem quasi vero aspernatur consectetur beatae, dolor neque, ad, atque eligendi voluptas molestiae, rem! Molestiae, facere.
+        </div>
+      </div>
+      <div class="column full-bg full-bg-2">
+        <div class="full-bg-text">
+          <h3 class="title">
+            Flexible work space
+          </h3> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde debitis architecto, est deleniti reprehenderit quia assumenda laudantium labore doloribus cumque maxime doloremque quidem facere ea eveniet ipsa exercitationem at dicta!
+        </div>
+      </div>
+      <div class="column full-bg full-bg-1">
+        <div class="full-bg-text">
+          <h3 class="title">
+            Events
+          </h3> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos fugiat similique a quia consequatur voluptatem quasi vero aspernatur consectetur beatae, dolor neque, ad, atque eligendi voluptas molestiae, rem! Molestiae, facere.
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="section">
     <div class="container is-fluid">
-      <h2 class="title is-text-centered">
+      <h2 class="title is-text-centered title-section">
         Alumni & Members
       </h2>
       <div class="columns">
@@ -182,8 +187,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <strong>Nexmo</strong>
-                  <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                  <strong>Growth from 5 to 60+ before moving out</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem.
                 </p>
               </div>
             </div>
@@ -201,8 +205,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <strong>Import.io</strong>
-                  <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                  <strong>Successful early members</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
                 </p>
               </div>
             </div>
@@ -222,8 +225,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <strong>Divide</strong>
-                  <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                  <strong>Acquired by Google in May 2014</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
                 </p>
               </div>
             </div>
@@ -241,24 +243,26 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <strong>Callsign</strong>
-                  <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                  <strong>Something cool about Callsign</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
                 </p>
               </div>
             </div>
           </article>
         </div>
       </div>
+      <div class="is-text-centered">
+        <a href="#" class="button is-medium">What are members saying about TechHub?</a>
+      </div>
     </div>
   </section>
 
   <section class="section">
     <div class="container is-fluid">
-      <h2 class="title is-text-centered">Memberships</h2>
+      <h2 class="title is-text-centered title-section">Memberships</h2>
       <div class="columns same-height">
         <div class="column">
-          <div class="message is-primary">
-            <div class="message-header is-text-centered message-header-membership">
+          <div class="message is-primary message-membership">
+            <div class="message-header is-text-centered">
               Flex
             </div>
             <div class="message-body">
@@ -267,8 +271,8 @@
           </div>
         </div>
         <div class="column">
-          <div class="message is-primary">
-            <div class="message-header is-text-centered message-header-membership">
+          <div class="message is-primary message-membership">
+            <div class="message-header is-text-centered">
               Resident
             </div>
             <div class="message-body">
@@ -277,8 +281,8 @@
           </div>
         </div>
         <div class="column">
-          <div class="message is-primary">
-            <div class="message-header is-text-centered message-header-membership">
+          <div class="message is-primary message-membership">
+            <div class="message-header is-text-centered">
               Team
             </div>
             <div class="message-body">
@@ -288,7 +292,7 @@
         </div>
       </div>
       <div class="content is-text-centered">
-        <a href="#" class="button is-primary">Discover more about our memberships</a>
+        <a href="#" class="button is-medium">Discover more about our memberships</a>
       </div>
     </div>
   </section>
@@ -315,10 +319,10 @@
   <footer class="footer small-padding-bottom">
     <div class="columns">
       <div class="column">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem facere vero ut ipsa magnam labore laboriosam numquam similique. Placeat corporis, quaerat aliquam incidunt provident earum veniam, numquam voluptate cum inventore!
+        <img src="images/map_dark.png" alt="">
       </div>
       <div class="column">
-        <img src="images/map.png" alt="">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem facere vero ut ipsa magnam labore laboriosam numquam similique. Placeat corporis, quaerat aliquam incidunt provident earum veniam, numquam voluptate cum inventore!
       </div>
       <div class="column">
         <ul class="list">
